[project]
name = "spoken"
version = "0.1.0"
description = "An example of use speech detection using NVIDIA's NeMo"
authors = [
    { name = "yngtdd", email = "yngtdd@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.1",
    "black>=23.7.0",
    "mkdocs>=1.5.2",
    "mkdocstrings-python>=1.6.2",
    "mkdocs-material>=9.2.8",
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
bench = ["python", "benches/bench.py"]
docs = ["mkdocs", "serve"]
test = ["pytest"]
